# docker-machine-learning

./: docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
